--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-binding</artifactId>
+            <version>2.27</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
